[gd_scene load_steps=4 format=2]

[ext_resource path="res://PlayerData.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 52.7603 )

[node name="PlayerData" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FloorRayCast" type="RayCast2D" parent="."]
enabled = true
exclude_parent = false

[node name="RightRayCast" type="RayCast2D" parent="."]
enabled = true
exclude_parent = false
cast_to = Vector2( 50, 0 )

[node name="LeftRayCast" type="RayCast2D" parent="."]
enabled = true
exclude_parent = false
cast_to = Vector2( -50, 0 )
[connection signal="area_entered" from="." to="." method="_on_PlayerData_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_PlayerData_area_exited"]
[connection signal="tree_exiting" from="." to="." method="_on_PlayerData_tree_exiting"]
